@@ -196,3 +196,7 @@
 	* Added a drop-down control with enumerated sound devices for MME
 	audio in 'src/rdadminb/rdadminb.cpp' and
 	'src/rdadminb/rdadminb.h'.
+2017-02-24 Fred Gleason <fredg@paravelsystems.com>
+	* Fixed a typo in 'src/rdadminb/Makefile.am',
+	'src/rdlibraryb/Makefile.am' and 'src/rdlogeditb/Makefile.am' that
+	broke the build on Linux.
